Another translation wrapping fix. See #84

--- a/sites/all/themes/dev/warmshowers_zen/css/fresh.css
+++ b/sites/all/themes/dev/warmshowers_zen/css/fresh.css
@@ -286,7 +286,7 @@ body.with-highlight .region-highlight {
   height: 192px;
 }
 body.front.not-logged-in #navigation .section {
-  top: -212px;
+  top: -224px;
 }
 body.with-highlight #navigation .section {
   top: -300px;
@@ -717,24 +717,24 @@ div.block-locale ul a.active {
 
 body.front.not-logged-in #highlight_wrapper_anon {
 	position: relative;
-	height: 85px;
-	margin-top: 20px;
+	height: 91px;
+	margin-top: 24px;
 }
 body.front.not-logged-in #highlight_wrapper_anon .welcome_msg {
 	position: absolute;
-	top: 10px;
-	left: 264px;
-	width: 460px;
+	top: 0;
+	left: 205px;
+	width: 495px;
 	color: #a2c2e4;
-	font-size: 11px;
-	line-height: 17px;
+	font-size: 13px;
+	line-height: 19px;
 }
 body.front.not-logged-in #highlight_wrapper_anon .welcome_msg strong {
 	color: #FFF;
 	font-weight: normal;
 }
 body.front.not-logged-in #highlight_wrapper_anon #block-wsuser-wsuser_member_count_block {
-  width: 280px;
+  width: 185px;
   height: 100px;
   float: none;
   margin: 0;
@@ -744,23 +744,23 @@ body.front.not-logged-in #highlight_wrapper_anon #block-wsuser-wsuser_member_cou
 	position: absolute;
 	top: 0;
 	left: 0;
+	border-right: 1px solid #FFF;
 }
 body.front.not-logged-in #highlight_wrapper_anon #block-wsuser-wsuser_member_count_block .numusers,
 body.front.not-logged-in #highlight_wrapper_anon #block-wsuser-wsuser_member_count_block .numhosts {
 	position: absolute;
-	width: 120px;
-	height: 62px;
-	word-wrap: break-word;
-	bottom: 0;
-	left: 0;
+	height: 45px;
+	bottom: -5px;
+	right: 15px;
   text-transform: uppercase;
-	font-size: 12.5px;
+	font-size: 12px;
+	text-align: right;
 }
 body.front.not-logged-in #highlight_wrapper_anon #block-wsuser-wsuser_member_count_block .numhosts {
-	left: 140px;
+	bottom: 50px;
 }
 body.front.not-logged-in #highlight_wrapper_anon #block-wsuser-wsuser_member_count_block .big_number {
-	font-size: 46px;
+	font-size: 30px;
 	color: #FFF;
   font-family: 'Sue Ellen Francisco', cursive;
 }
